--- a/style.css
+++ b/style.css
@@ -18,14 +18,20 @@ body {
   border-top-right-radius: 10px;
 }
 
-.nav-links {
+nav {
   display: flex;
-  gap: 20px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.nav-links {
+  display: none; /* Hide by default on larger screens */
 }
 
 .nav-link {
   color: white;
   text-decoration: none;
+  margin-right: 20px;
 }
 
 .events {
@@ -143,15 +149,16 @@ h1 {
 }
 
 .add-to-cart-btn {
-  align-self: flex-end;
+  align-self: center;
   background: #270688;
   color: white;
-  padding: 8px 20px;
+  padding: 8px 50px;
   border: none;
   border-radius: 5px;
   font-weight: bold;
+  margin-left: 170px;
   cursor: pointer;
-  margin-top: 5px;
+  margin-top: 20px;
 }
 
 .add-to-cart-btn:disabled {
@@ -169,6 +176,8 @@ h1 {
   align-items: center;
   justify-content: center;
   width: 98.5vw; 
+  border-radius: 10px;
+  overflow: hidden;
   height: 500px; 
 }
 
@@ -184,7 +193,7 @@ h1 {
   width: 350px;
   position: absolute; 
   top: 500px; 
-  left: 100px; 
+  align-self: center;
   background-color: rgba(255, 255, 255, 0.8); 
   border: none;
   border-radius: 5px;
@@ -202,4 +211,53 @@ h1 {
 
 #purchases{
   margin-bottom: 100px;
+}
+
+
+
+
+
+.containerFiltered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 150px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+
+#filterContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+  background-color: #cce8f6;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+
+select {
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 15px;
+}
+
+#filterButton {
+  padding: 8px 20px;
+  background-color: #6ca6e3;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-size: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+#filterButton:hover {
+  background-color: #0a427d;
 }
